container.txt formatting and and path handling for java versions compatibility